[tool.poetry]
name = "whatsapp-cloud-api"
version = "0.1.0"
description = ""
authors = ["Carlos A. Palacios R. <carlosargelio0104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
